# tinirun

./: .dockerignore  .gitignore  .goreleaser.yaml  Cargo.toml  Dockerfile  README.md  biome.json  docker-compose.yml  fly.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: deploy.yml  release.yml
.zed/: settings.json
clients/: README.md
clients/node/: index.d.ts  index.js  package.json  types.d.ts
clients/rust/: Cargo.toml
clients/rust/src/: lib.rs
crates/models/: Cargo.toml
crates/models/src/: lib.rs
demo/: .dockerignore  .env.example  .gitignore  Dockerfile  fly.toml  package.json  tsconfig.json  vite.config.ts
demo/src/: env.js  env.ts  routeTree.gen.ts  router.tsx  styles.css
demo/src/api/: index.ts  runCode.ts
demo/src/components/: CodeEditor.tsx  CodeRunner.tsx  Header.tsx  demo.chat-area.tsx
demo/src/components/runner/: CodeRunner.tsx  LogChunk.tsx  LogOutputPanel.tsx  constants.ts
demo/src/db-collections/: index.ts
demo/src/hooks/: demo.useChat.ts
demo/src/routes/: __root.tsx  index.tsx
server/: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md
server/docker/: data.toml
server/docker/templates/: bash.liquid  go.liquid  js.liquid  python.liquid  rust.liquid  ts.liquid
server/docker/templates/bash/: Dockerfile.liquid  run.sh  script.sh
server/docker/templates/go/: Dockerfile.liquid  function.go  main.go
server/docker/templates/javascript/: Dockerfile.liquid  function.js  index.js
server/docker/templates/python/: Dockerfile.liquid  function.py  main.py
server/docker/templates/rust/: Dockerfile.liquid  function.rs  main.rs
server/docker/templates/typescript/: Dockerfile.liquid  function.ts  main.ts
server/src/: auth.rs  config.rs  errors.rs  lib.rs  main.rs  state.rs
server/src/api/: mod.rs  run_code.rs
server/src/api/function/: create.rs  get.rs  get_detail.rs  list.rs  mod.rs  run.rs  run_stream.rs  update.rs
server/src/input/: json.rs  mod.rs  stream_type.rs
server/src/redis/: client.rs  mod.rs  structs.rs
server/src/responses/: mod.rs  sse.rs  stream.rs
server/src/routes/: hello.rs  mod.rs  run_code.rs
server/src/runner/: cleanup.rs  constants.rs  executor.rs  functions.rs  mod.rs  plugin.rs  structs.rs  validators.rs
server/src/runner/executor/: build.rs  create.rs  output_task.rs  pull.rs
server/src/runner/helpers/: attach.rs  build.rs  cleanup.rs  create.rs  exit.rs  log.rs  mod.rs  pull.rs  sync.rs
