[workspace]
resolver = "2"
members = ["clients/rust", "crates/*", "server"]

[workspace.dependencies]
schemars = { version = "1.2", features = ["chrono04", "preserve_order"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = { version = "0.27", features = ["derive"] }
validator = { version = "0.20", features = ["derive"] }
