[package]
name = "tinirun-server"
version = "0.1.0"
edition = "2024"

[dependencies]
aide = { version = "0.16.0-alpha.2", features = [
  "axum",
  "axum-json",
  "axum-query",
  "swagger"
] }
anyhow = "1.0.102"
astral-tokio-tar = "0.5.6"
axum = { version = "0.8.8", features = ["json", "query"] }
axum-app-wrapper = { git = "https://gitea.fasharp.io/fa-sharp/axum-app-wrapper", rev = "a8d5e4f962" }
axum-streams = { version = "0.24.0", features = ["json"] }
bollard = { version = "0.20.1", features = ["ssl"] }
dotenvy = "0.15.7"
figment = { version = "0.10.19", features = ["env"] }
futures = { version = "0.3.32", default-features = false, features = ["std"] }
include_dir = "0.7.4"
liquid = "0.26.11"
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tinirun-models = { path = "../crates/models" }
tokio = { version = "1.49.0", default-features = false, features = [
  "net",
  "rt",
  "rt-multi-thread",
  "signal"
] }
tokio-stream = { version = "0.1.18", default-features = false }
tokio-util = { version = "0.7.18", default-features = false, features = ["io"] }
toml = { version = "1.0.3", features = ["serde"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }
type-map = "0.5.1"
uuid = { version = "1.21.0", features = ["v4"] }
validator = { workspace = true }
