[package]
name = "tinirun-client"
version = "0.1.0"
edition = "2024"

[dependencies]
futures = { version = "0.3", default-features = false, features = ["std"] }
reqwest = { version = "0.13", default-features = false, features = [
  "http2",
  "stream"
] }
reqwest-streams = { version = "0.15", features = ["json"] }
ring = { version = "0.17", optional = true }
rustls = { version = "0.23", default-features = false, features = [
  "ring",
  "std",
  "tls12"
], optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tinirun-models = { path = "../../crates/models" }
validator = { workspace = true }

[features]
default = []
tls = ["dep:ring", "dep:rustls", "reqwest/rustls-no-provider"]
