[package]
name = "tinirun-models"
version = "0.1.1"
edition = "2024"
description = "Shared models for the tinirun API"

[dependencies]
bollard = { workspace = true, optional = true }
regex = "1.12"
schemars = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
thiserror = { workspace = true }
validator = { workspace = true }

[features]
default = []
